pod-ressourec.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-resources
spec:
  terminationGracePeriodSeconds: 2
  containers:
  - name: meinserver
    image: erkules/nginxhostname
    resources:
      requests:
        cpu: 10m
        memory: 20Mi
        ephemeral-storage: "10Mi"
      limits:
        cpu: 50m
        memory: 50Mi
        ephemeral-storage: "10Mi"
