pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: www
spec:
  terminationGracePeriodSeconds: 2
  containers:
  - name: meinserver
    image: erkules/nginxhostname
