deployment-ressources.yaml

apiVersion: v1
kind: Service
metadata:
  name: requests
spec: 
  selector:
    app: wwwlimitted
  ports:
  - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwwlimitted
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 5
  minReadySeconds: 4
  selector:
    matchLabels:
      app: wwwlimitted
  template:
    metadata:
      name: wwwlimitted
      labels:
        app: wwwlimitted
    spec:
      #priorityClassName: vollwichtig
      priorityClassName: auchwichtig
      terminationGracePeriodSeconds: 2
      containers:
      - name: image1
        image: erkules/nginxhostname
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
            ephemeral-storage: "10Mi"
          limits:
            cpu: 50m
            memory: 50Mi
            ephemeral-storage: "10Mi"
